--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "html-loader": "^1.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-markdown": "^4.3.1",
+    "react-mathjax2": "0.0.2",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.0",
+    "react-syntax-highlighter": "^12.2.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
